--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/tiny-slider-react": "^0.3.6",
     "axios": "^1.4.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -73,6 +74,8 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "tiny-slider": "^2.9.4",
+    "tiny-slider-react": "^0.5.7",
     "typescript": "^4.9.5",
     "wagmi": "^0.12.12",
     "web3": "^1.10.0",
