--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@emotion/styled": "^11.11.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
-    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query": "^5.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -62,6 +62,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-metamask-avatar": "^1.6.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
     "remark-gfm": "^3.0.1",
