--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # `TESTNET` or `MAINNET`
 REACT_APP_NET_ENV=TESTNET
 
+# BANNNER
+REACT_APP_BANNER_IDS="22, 23, 13, 16, 6"
+
 PUBLIC_URL=
 
 GENERATE_SOURCEMAP=false
