--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
     "react-dev-utils": "^12.0.1",
     "tslint": "^6.1.3",
