--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.8.1",
     "@types/bn.js": "^5.1.1",
     "@types/identicon.js": "^2.3.1",
     "@types/sha256": "^0.2.0",
