--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -117,6 +118,7 @@
     "@tanstack/react-query-devtools": "^5.8.1",
     "@types/bn.js": "^5.1.1",
     "@types/identicon.js": "^2.3.1",
+    "@types/lodash": "^4.14.201",
     "@types/sha256": "^0.2.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
