--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   build:
-    runs-on: [prod-cicd-runners]
+    runs-on: ubuntu-latest
     # if: "contains(github.event.head_commit.message, 'aptos-trace')"
     steps:
       - uses: actions/checkout@v3
