--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Build React App
         env:
+          REACT_APP_NET_ENV: MAINNET
+          REACT_APP_BANNER_IDS: ""
           PUBLIC_URL: https://marketplace.mindpress.io
           GENERATE_SOURCEMAP: false
           REACT_APP_GF_EXPLORER_URL: https://greenfieldscan.com/
