--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -86,7 +86,7 @@ jobs:
           # [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_NAME=$IMAGE_NAME
           echo VERSION=${GITHUB_SHA::8}
-          docker tag $IMAGE_NAME $IMAGE_NAME:$VERSION
+          docker tag $IMAGE_NAME $IMAGE_NAME:${GITHUB_SHA::8}
           docker tag $IMAGE_NAME $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:$VERSION
+          docker push $IMAGE_NAME:${GITHUB_SHA::8}
           docker push $IMAGE_NAME:latest
