--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.22.1",
-    "@bnb-chain/greenfield-js-sdk": "1.0.2",
+    "@bnb-chain/greenfield-js-sdk": "1.0.3",
     "@dopex-io/web3-multicall": "^0.1.9",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -91,7 +91,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "build:gf": "export INLINE_RUNTIME_CHUNK=true && export GENERATE_SOURCEMAP=false && IMAGE_INLINE_SIZE_LIMIT=10000000 && node scripts/build.js",
+    "build:gf": "export INLINE_RUNTIME_CHUNK=true && export GENERATE_SOURCEMAP=false && IMAGE_INLINE_SIZE_LIMIT=1000000000 && node scripts/build.js",
     "test": "node scripts/test.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
@@ -128,6 +128,7 @@
     "prettier": "^2.8.8",
     "react-dev-utils": "^12.0.1",
     "tslint": "^6.1.3",
+    "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.9.0"
   },
   "jest": {
