--- a/.github/workflows/mainnet-release.yaml
+++ b/.github/workflows/mainnet-release.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [main]
   push:
-    branches: [ui]
+    branches: [main]
 
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository }}
