--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-markdown": "^8.0.7",
     "react-metamask-avatar": "^1.6.0",
     "react-refresh": "^0.11.0",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
     "remark-gfm": "^3.0.1",
     "resolve": "^1.22.2",
@@ -121,6 +122,7 @@
     "@types/bn.js": "^5.1.1",
     "@types/identicon.js": "^2.3.1",
     "@types/lodash": "^4.14.201",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@types/sha256": "^0.2.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
