--- a/package.json
+++ b/package.json
@@ -69,12 +69,14 @@
     "react-refresh": "^0.11.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
     "remark-gfm": "^3.0.1",
     "resolve": "^1.22.2",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.6.0",
     "semver": "^7.5.1",
     "sha256": "^0.2.0",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^3.0.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.2",
@@ -123,6 +125,7 @@
     "@types/identicon.js": "^2.3.1",
     "@types/lodash": "^4.14.201",
     "@types/react-responsive-masonry": "^2.1.3",
+    "@types/react-slick": "^0.23.13",
     "@types/sha256": "^0.2.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
