--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
     "typescript": "^4.9.5",
+    "viem": "^2.0.10",
     "wagmi": "^0.12.12",
     "web3": "^1.10.0",
     "web3-utils": "^1.10.0",
