--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ebay/nice-modal-react": "^1.2.13",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@node-real/walletkit": "^1.0.9",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^5.5.0",
     "@tanstack/react-query": "^5.7.2",
@@ -84,8 +85,8 @@
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
     "typescript": "^4.9.5",
-    "viem": "^2.0.10",
-    "wagmi": "^0.12.12",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13",
     "web3": "^1.10.0",
     "web3-utils": "^1.10.0",
     "webpack": "^5.87.0",
