--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@types/tiny-slider-react": "^0.3.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.4.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.3.0",
