--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest": "^27.5.1",
     "jest-resolve": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
+    "jotai": "^2.6.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
