--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-resolve": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
     "jotai": "^2.6.2",
+    "jotai-immer": "^0.3.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
