--- a/.env.example
+++ b/.env.example
@@ -9,19 +9,19 @@ PUBLIC_URL=
 GENERATE_SOURCEMAP=false
 
 REACT_APP_GF_EXPLORER_URL=https://greenfieldscan.com/
-REACT_APP_BSC_EXPLORER_URL=https://testnet.bscscan.com/
+REACT_APP_BSC_EXPLORER_URL=https://testnet.opbnbscan.com/
 REACT_APP_DCELLAR_URL=https://dcellar.io/
 
 REACT_APP_GF_CHAIN_ID=5600
 REACT_APP_GF_RPC_URL=https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
-REACT_APP_BSC_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
-REACT_APP_BSC_CHAIN_ID=97
+REACT_APP_BSC_RPC_URL=https://opbnb-testnet-rpc.bnbchain.org
+REACT_APP_BSC_CHAIN_ID=5611
 
-REACT_APP_MARKETPLACE_CONTRACT_ADDRESS =0x31198b59CE7403c29124d919f6735fb040Ef7fD1
-REACT_APP_GROUP_HUB_CONTRACT_ADDRESS =0x50B3BF0d95a8dbA57B58C82dFDB5ff6747Cc1a9E
-REACT_APP_MULTI_CALL_CONTRACT_ADDRESS =0x50f6210b85d38F5d0E660D6C8978C9bdCd12F130
-REACT_APP_ERC1155_TRANSFER_CONTRACT_ADDRESS =0x43bdF3d63e6318A2831FE1116cBA69afd0F05267
-REACT_APP_ERC721_TRANSFER_CONTRACT_ADDRESS =0x7fC61D6FCA8D6Ea811637bA58eaf6aB17d50c4d1
+REACT_APP_MARKETPLACE_CONTRACT_ADDRESS =0xbDc835828B140d1F36315f70575a8a057506ECC4
+REACT_APP_GROUP_HUB_CONTRACT_ADDRESS =0xe53725ac14bD77fA4754fC5a09889135C2c7Bc25
+REACT_APP_MULTI_CALL_CONTRACT_ADDRESS =0xB3C3c8434BCaD4171F86426C2AFBf5A9c0590Be2
+REACT_APP_ERC1155_TRANSFER_CONTRACT_ADDRESS =0x5116a3255C33029756013B6a0d1690775413EE6D
+REACT_APP_ERC721_TRANSFER_CONTRACT_ADDRESS =0x8C74F8e6cD4DCb307d344F358683594A68d66CD9
 
 REACT_APP_NETWORK=Testnet
 
