--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.22.1",
-    "@bnb-chain/greenfield-js-sdk": "1.0.3",
+    "@bnb-chain/greenfield-js-sdk": "2.0.0-alpha.9",
     "@dopex-io/web3-multicall": "^0.1.9",
     "@ebay/nice-modal-react": "^1.2.13",
     "@emotion/react": "^11.11.0",
@@ -65,6 +65,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.8.3",
     "prompts": "^2.4.2",
+    "rc-upload": "^4.5.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
