--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "chakra-react-select": "^4.7.6",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "date-fns": "^2.30.0",
@@ -46,6 +47,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
+    "formik": "^2.4.6",
     "fs-extra": "^10.1.0",
     "history": "^5.3.0",
     "html-inline-css-webpack-plugin": "^1.11.1",
@@ -96,7 +98,8 @@
     "webpack": "^5.87.0",
     "webpack-dev-server": "^4.15.0",
     "webpack-manifest-plugin": "^4.1.1",
-    "workbox-webpack-plugin": "^6.6.0"
+    "workbox-webpack-plugin": "^6.6.0",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
