--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.22.1",
+    "@bnb-chain/bsc-cross-greenfield-sdk": "^0.0.2",
     "@bnb-chain/greenfield-js-sdk": "2.0.0-alpha.9",
     "@dopex-io/web3-multicall": "^0.1.9",
     "@ebay/nice-modal-react": "^1.2.13",
@@ -36,6 +37,7 @@
     "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chakra-react-select": "^4.7.6",
+    "compressorjs": "^1.2.1",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "date-fns": "^2.30.0",
@@ -46,6 +48,7 @@
     "eslint": "^8.41.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
+    "ethers": "5",
     "file-loader": "^6.2.0",
     "formik": "^2.4.6",
     "fs-extra": "^10.1.0",
@@ -90,7 +93,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
-    "typescript": "^4.9.5",
+    "typescript": "^5.4.5",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13",
     "web3": "^1.10.0",
