--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@totejs/icons": "^2.13.0",
     "@totejs/uikit": "^2.54.1",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -58,9 +57,6 @@
     "html-webpack-plugin": "^5.5.1",
     "identicon.js": "^2.3.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-resolve": "^27.5.1",
-    "jest-watch-typeahead": "^1.1.0",
     "jotai": "^2.6.2",
     "jotai-immer": "^0.3.0",
     "lodash": "^4.17.21",
@@ -133,9 +129,11 @@
     ]
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@tanstack/react-query-devtools": "^5.8.1",
     "@types/bn.js": "^5.1.1",
     "@types/identicon.js": "^2.3.1",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.201",
     "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-slick": "^0.23.13",
@@ -144,61 +142,13 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "react-dev-utils": "^12.0.1",
+    "ts-jest": "^29.1.2",
     "tslint": "^6.1.3",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.9.0"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "^src/(.*)$": "<rootDir>/src/$1"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "babel": {
     "presets": [
