--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chakra-react-select": "^4.7.6",
     "compressorjs": "^1.2.1",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "date-fns": "^2.30.0",
@@ -54,7 +55,6 @@
     "fs-extra": "^10.1.0",
     "history": "^5.3.0",
     "html-inline-css-webpack-plugin": "^1.11.1",
-    "html-webpack-plugin": "^5.5.1",
     "identicon.js": "^2.3.3",
     "identity-obj-proxy": "^3.0.0",
     "jotai": "^2.6.2",
@@ -138,13 +138,18 @@
     "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-slick": "^0.23.13",
     "@types/sha256": "^0.2.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.1",
+    "inline-source-webpack-plugin": "^3.0.1",
     "jest": "^29.7.0",
     "prettier": "^2.8.8",
+    "react-app-rewired": "^2.2.1",
     "react-dev-utils": "^12.0.1",
+    "stream-browserify": "^3.0.0",
     "ts-jest": "^29.1.2",
     "tslint": "^6.1.3",
     "url-loader": "^4.1.1",
