--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,11 @@ PUBLIC_URL=
 GENERATE_SOURCEMAP=false
 
 REACT_APP_GF_EXPLORER_URL=https://greenfieldscan.com/
-REACT_APP_BSC_EXPLORER_URL=https://testnet.opbnbscan.com/
+REACT_APP_BSC_EXPLORER_URL=https://testnet.bscscan.com/
 REACT_APP_DCELLAR_URL=https://dcellar.io/
 
 REACT_APP_GF_CHAIN_ID=5600
 REACT_APP_GF_RPC_URL=https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
-REACT_APP_BSC_RPC_URL=https://opbnb-testnet-rpc.bnbchain.org
-REACT_APP_BSC_CHAIN_ID=5611
 
 REACT_APP_NETWORK=Testnet
 
