--- a/.github/workflows/testnet-release.yaml
+++ b/.github/workflows/testnet-release.yaml
@@ -35,13 +35,11 @@ jobs:
           PUBLIC_URL: https://testnet-marketplace.mindpress.io
           GENERATE_SOURCEMAP: false
           REACT_APP_GF_EXPLORER_URL: https://testnet.greenfieldscan.com/
-          REACT_APP_BSC_EXPLORER_URL: https://testnet.opbnbscan.com/
+          REACT_APP_BSC_EXPLORER_URL: https://testnet.bscscan.com/
           REACT_APP_DCELLAR_URL: https://testnet.dcellar.io/
 
           REACT_APP_GF_CHAIN_ID: 5600
           REACT_APP_GF_RPC_URL: https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
-          REACT_APP_BSC_RPC_URL: https://opbnb-testnet-rpc.bnbchain.org
-          REACT_APP_BSC_CHAIN_ID: 5611
           REACT_APP_NETWORK: Testnet
           REACT_APP_DAPP_NAME: mindt0125
           G_TAG: G-SHLTDD3YG4
