--- a/.github/workflows/testnet-release.yaml
+++ b/.github/workflows/testnet-release.yaml
@@ -31,7 +31,6 @@ jobs:
       - name: Build React App
         env:
           REACT_APP_NET_ENV: TESTNET
-          REACT_APP_BANNER_IDS: "22,23,13,16,6"
           PUBLIC_URL: https://testnet-marketplace.mindpress.io
           GENERATE_SOURCEMAP: false
           REACT_APP_GF_EXPLORER_URL: https://testnet.greenfieldscan.com/
@@ -40,10 +39,12 @@ jobs:
 
           REACT_APP_GF_CHAIN_ID: 5600
           REACT_APP_GF_RPC_URL: https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
+          REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS: 0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F
           REACT_APP_NETWORK: Testnet
           REACT_APP_DAPP_NAME: mindt0527
           G_TAG: G-SHLTDD3YG4
           REACT_APP_API_DOMAIN: https://api-testnet-marketplace.mindpress.io/v1/
+          REACT_APP_UPLOAD_OBJECT_FEE: 0.000012
         run: |
           pnpm run build
 
