--- a/.env.example
+++ b/.env.example
@@ -3,19 +3,21 @@ REACT_APP_NET_ENV=TESTNET
 PUBLIC_URL=
 GENERATE_SOURCEMAP=false
 
-REACT_APP_GF_EXPLORER_URL=https://greenfieldscan.com/
+REACT_APP_GF_EXPLORER_URL=https://testnet.greenfieldscan.com/
 REACT_APP_BSC_EXPLORER_URL=https://testnet.bscscan.com/
-REACT_APP_DCELLAR_URL=https://dcellar.io/
+REACT_APP_DCELLAR_URL=https://testnet.dcellar.io/
 
 REACT_APP_GF_CHAIN_ID=5600
 REACT_APP_GF_RPC_URL=https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
 
+REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS=0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F
+
 REACT_APP_NETWORK=Testnet
+
+REACT_APP_DAPP_NAME=mindt0527
 
 G_TAG=
 
-REACT_APP_API_DOMAIN=
-
-REACT_APP_DAPP_NAME=
+REACT_APP_API_DOMAIN=https://api-testnet-marketplace.mindpress.io/v1/
 
 REACT_APP_UPLOAD_OBJECT_FEE=0.000012
