chore: Upgrade workflow

--- a/.github/workflows/mainnet-release.yaml
+++ b/.github/workflows/mainnet-release.yaml
@@ -39,7 +39,7 @@ jobs:
 
           REACT_APP_GF_CHAIN_ID: 1017
           REACT_APP_GF_RPC_URL: https://greenfield-chain.bnbchain.org:443
-          REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS: 0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F
+          REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS: "0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F"
           REACT_APP_NETWORK: Mainnet
           # REACT_APP_DAPP_NAME: mindv05
           REACT_APP_DAPP_NAME: mindt0527
