--- a/.github/workflows/testnet-release.yaml
+++ b/.github/workflows/testnet-release.yaml
@@ -39,7 +39,7 @@ jobs:
 
           REACT_APP_GF_CHAIN_ID: 5600
           REACT_APP_GF_RPC_URL: https://gnfd-testnet-fullnode-tendermint-us.bnbchain.org
-          REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS: 0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F
+          REACT_APP_NEW_MARKETPLACE_CONTRACT_ADDRESS: "0xf1a52C24DD202C74fB91fD3F7F2B24748f959b9F"
           REACT_APP_NETWORK: Testnet
           REACT_APP_DAPP_NAME: mindt0527
           G_TAG: G-SHLTDD3YG4
