--- a/.github/workflows/testnet-release.yaml
+++ b/.github/workflows/testnet-release.yaml
@@ -44,7 +44,7 @@ jobs:
           REACT_APP_DAPP_NAME: mindt0527
           G_TAG: G-SHLTDD3YG4
           REACT_APP_API_DOMAIN: https://api-testnet-marketplace.mindpress.io/v1/
-          REACT_APP_UPLOAD_OBJECT_FEE: 0.000012
+          REACT_APP_UPLOAD_OBJECT_FEE: "0.000012"
         run: |
           pnpm run build
 
