--- a/package.json
+++ b/package.json
@@ -3,96 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.22.1",
     "@bnb-chain/bsc-cross-greenfield-sdk": "^0.0.2",
     "@bnb-chain/greenfield-cosmos-types": "0.4.0-alpha.32",
     "@bnb-chain/greenfield-js-sdk": "2.0.0-alpha.9",
     "@ebay/nice-modal-react": "^1.2.13",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
     "@node-real/walletkit": "^1.0.12",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@svgr/webpack": "^5.5.0",
     "@tanstack/react-query": "^5.7.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@totejs/icons": "^2.13.0",
     "@totejs/uikit": "^2.54.1",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "@types/tiny-slider-react": "^0.3.6",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.4.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
     "bn.js": "^5.2.1",
-    "browserslist": "^4.21.7",
-    "buffer": "^6.0.3",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chakra-react-select": "^4.7.6",
     "compressorjs": "^1.2.1",
-    "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "dayjs": "^1.11.8",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "eslint": "^8.41.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.2.0",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
     "fs-extra": "^10.1.0",
-    "history": "^5.3.0",
-    "html-inline-css-webpack-plugin": "^1.11.1",
-    "identity-obj-proxy": "^3.0.0",
     "jotai": "^2.6.2",
     "jotai-immer": "^0.3.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.24",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.8.3",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-metamask-avatar": "^1.6.0",
-    "react-refresh": "^0.11.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "remark-gfm": "^3.0.1",
     "resolve": "^1.22.2",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.6.0",
     "semver": "^7.5.1",
     "slick-carousel": "^1.8.1",
     "source-map-loader": "^3.0.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.2",
-    "terser-webpack-plugin": "^5.3.9",
     "tiny-slider": "^2.9.4",
     "tiny-slider-react": "^0.5.7",
-    "typescript": "^5.4.5",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13",
-    "web3": "^1.10.0",
-    "web3-utils": "^1.10.0",
-    "webpack": "^5.87.0",
-    "webpack-dev-server": "^4.15.0",
-    "webpack-manifest-plugin": "^4.1.1",
-    "workbox-webpack-plugin": "^6.6.0",
     "yup": "^1.4.0"
   },
   "scripts": {
@@ -123,29 +75,70 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@jest/globals": "^29.7.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "^5.5.0",
     "@tanstack/react-query-devtools": "^5.8.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/bn.js": "^5.1.1",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.201",
+    "@types/node": "^16.18.34",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-slick": "^0.23.13",
+    "@types/tiny-slider-react": "^0.3.6",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
+    "browserslist": "^4.21.7",
+    "buffer": "^6.0.3",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "customize-cra": "^1.0.0",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "html-inline-css-webpack-plugin": "^1.11.1",
     "html-webpack-plugin": "^5.5.1",
     "inline-source-webpack-plugin": "^3.0.1",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.24",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.8",
     "react-app-rewired": "^2.2.1",
     "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.11.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.6.0",
     "stream-browserify": "^3.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-jest": "^29.1.2",
-    "tslint": "^6.1.3",
+    "typescript": "^5.4.5",
     "url-loader": "^4.1.1",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "webpack": "^5.87.0",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-manifest-plugin": "^4.1.1",
+    "workbox-webpack-plugin": "^6.6.0"
   },
   "babel": {
     "presets": [
