--- a/.github/workflows/testnet-release.yaml
+++ b/.github/workflows/testnet-release.yaml
@@ -75,7 +75,7 @@ jobs:
           # [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_NAME=$IMAGE_NAME
           echo VERSION=${GITHUB_SHA::8}
-          # docker tag $IMAGE_NAME $IMAGE_NAME:${GITHUB_SHA::8}
+          docker tag $IMAGE_NAME testnet-$IMAGE_NAME:${GITHUB_SHA::8}
           docker tag $IMAGE_NAME $IMAGE_NAME:testnet
-          # docker push $IMAGE_NAME:${GITHUB_SHA::8}
+          docker push testnet-$IMAGE_NAME:${GITHUB_SHA::8}
           docker push $IMAGE_NAME:testnet
