--- a/.github/workflows/mainnet-release.yaml
+++ b/.github/workflows/mainnet-release.yaml
@@ -76,7 +76,7 @@ jobs:
           # [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_NAME=$IMAGE_NAME
           echo VERSION=${GITHUB_SHA::8}
-          docker tag $IMAGE_NAME $IMAGE_NAME:${GITHUB_SHA::8}
+          # docker tag $IMAGE_NAME $IMAGE_NAME:${GITHUB_SHA::8}
           docker tag $IMAGE_NAME $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:${GITHUB_SHA::8}
+          # docker push $IMAGE_NAME:${GITHUB_SHA::8}
           docker push $IMAGE_NAME:latest
